Fix horizontal overflow in mobile view caused by heading

--- a/assets/sass/_content.scss
+++ b/assets/sass/_content.scss
@@ -18,6 +18,9 @@
     text-decoration-thickness: 4px;
     padding-top: 1em;
     padding-bottom: .5em;
+    @media only screen and (max-width: 360px) {
+      font-size: 1.6em;
+    }
   }
   .main-header {
     font-size: 2.8em;
